# lippolc

./: .gitignore  CMakeLists.txt  README.md
src/benchmark/: benchmark.h  flags.h  microbench.cpp  utils.h
src/core/: concurrency.h  lipp.h  lipp_base.h
src/examples/: example_mt.cpp
